[package]
name = "jito-protos"
version = "0.1.0"
description = "Protobufs for working with block engine"
edition = "2024"
publish = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
